--- a/pages/collection/collection.wxml
+++ b/pages/collection/collection.wxml
@@ -4,20 +4,18 @@
  <view  class="img hide{{showView?'show':''}}" bindtap="onChangeShowState"><image src='img/u3885.png'></image></view>
   <view  class="img hide{{showView?'':'show'}}" bindtap="onChangeShowState"><image src='img/u3885.png'></image></view>
      <scroll-view  class="swiper-tab" scroll-x="true" >
-      <view wx:for="{{nav}}"  class="bre swiper-tab-list {{item.tab==tab? 'on' : ''}}" data-current="{{item.tab}}" bindtap="tab_click" >{{item.name}}</view>  
+      <view wx:for="{{nav}}"  class="bre swiper-tab-list "  bindtap="tab_click" >{{item.name}}</view>  
    </scroll-view>
  
   </view> 
    <swiper current="{{tab}}" class="swiper-box" duration="300" bindchange="tab_slide"  bindchange="tab_slide" style="height:{{winHeight}}px">
     <swiper-item  wx:for="{{nav}}" wx:for-item="items">
-          <scroll-view scroll-y="{{true}}" bindscroll="scroll"  style="height:{{winHeight}}px" >
+          <scroll-view scroll-y="{{true}}" bindscroll="scroll"  style="height:{{height}}px" >
           <view class='listview' wx:for="{{shares}}" wx:for-item="item"  wx:key="*this">
              <template  is="{{item.type == '29' ? 'joy-text' : (item.type == '10' ? 'joy-pic' : (item.type == '41' ? 'joy-video' : 'joy-pic'))}}" data="{{item}}"   bindtap></template>
-    </view> 
-    </scroll-view>
-      
+          </view> 
+         </scroll-view>
     </swiper-item>
- 
   </swiper>
   <view class="mask hide{{showView?'':'show'}}" >
         <view class='all_seach'>
