--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -67,7 +67,8 @@
 
 
 <view class='buttom_nav'>
-<view class='star'><image src='img/u5053.png'></image></view>
+<view class='star' bindtap="collection"  wx:if="{{!collectionimg}}"><image src='img/u5053.png'></image></view>
+<view class='star' bindtap="delect_collection"  wx:else><image src='img/u1001.png'></image></view>
 <input class='input' type='text' placeholder='写评论' bindtap="bindReply"  disabled='display'  ></input>
 <view class='share'> <button open-type="share" >
 			</button><image src='img/u5055.png'></image></view>
