--- a/pages/integral_order/integral_order.wxml
+++ b/pages/integral_order/integral_order.wxml
@@ -1,54 +1,19 @@
 <view class="all" style='height:{{height}}px;'>
    <view class="nav">
-	   <view class="this"> 普通订单</view>
-	   <view class=""> 众筹订单</view>
-	   <view class=""> 众筹订单</view>
-	   <view class=""> 积分订单</view>
+	   <view class="" bindtap="go" data-id="../order/order"> 普通订单</view>
+	   <view class="" bindtap="go"> 众筹订单</view>
+	   <view class="" bindtap="go"> 众筹订单</view>
+	   <view class="this" bindtap="go"  data-id="../integral_order/integral_order"> 积分订单</view>
    </view>
 	<view class='title'>
 		<view class="title_list {{tab==1? 'on' : ''}}" data-current="1" bindtap="tab_click">全部</view>
-		<view class="title_list {{tab==2? 'on' : ''}}" data-current="2" bindtap="tab_click">待付款</view>
 		<view class="title_list {{tab==3? 'on' : ''}}" data-current="3" bindtap="tab_click">待发货</view>
 		<view class="title_list {{tab==4? 'on' : ''}}" data-current="4" bindtap="tab_click">待收货</view>
-		<view class="title_list {{tab==5? 'on' : ''}}" data-current="5" bindtap="tab_click">待评价</view>
 	</view>
 	<view class='content'>
 		<view class='order_list' wx:for="{{order}}">
-			<view wx:if="{{item.status==1}}">
-				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
-					<view class='box_list_one'>
-						<view>订单编号：{{item.parts_order_number}} </view>
-						<view class='static'>等待买家付款</view>
-					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
-						<view class='img'>
-							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
-						</view>
-						<view class='good_infor'>
-							<view class='good_name'>{{item.parts_goods_name}}</view>
-							<view class='good_selling'>{{item.goods_describe}}</view>
-							<view class='good_monye'>
-								<view class='good_uite'>
-									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
-									<text class='uite'>￥{{item.goods_money}}/片</text>
-								</view>
-								<view class='num'>x{{item.order_quantity}}</view>
-							</view>
-						</view>
-					</view>
-					<view class='box_list_three'>
-						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
-					</view>
-				</view>
-
-				<view class='box_list_four'>
-					<view>
-						<view class='cancel' bindtap="cancel_order" data-id="{{item.parts_order_number}}">取消订单</view>
-						<view class='payment' bindtap="repay" data-id="{{item.parts_order_number}}">付款</view>
-					</view>
-				</view>
-			</view>
-			<view wx:elif="{{item.status==2 || item.status==3}}">
+		
+			<view wx:if="{{item.status==2 || item.status==3}}">
 				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
 					<view class='box_list_one'>
 						<view>订单编号：{{item.parts_order_number}} </view>
@@ -80,7 +45,7 @@
 					</view>
 				</view>
 			</view>
-			<view wx:elif="{{item.status==4 || item.status==5}}">
+			<view wx:else>
 				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
 					<view class='box_list_one'>
 						<view>订单编号：{{item.parts_order_number}} </view>
@@ -110,135 +75,6 @@
 					<view class="flex">
 						<view class="courier">顺丰：799394904004040</view>
 						<view class='remind_delivery cancel type_button' bindtap="confirm_receipt" data-id="{{item.parts_order_number}}">确认收货</view>
-					</view>
-				</view>
-			</view>
-			<view wx:elif="{{item.status==6 || item.status==7}}">
-				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
-					<view class='box_list_one'>
-						<view>订单编号：{{item.parts_order_number}} </view>
-						<view class='static'>交易成功</view>
-					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
-						<view class='img'>
-							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
-						</view>
-						<view class='good_infor'>
-							<view class='good_name'>{{item.parts_goods_name}}</view>
-							<view class='good_selling'>{{item.goods_describe}}</view>
-							<view class='good_monye'>
-								<view class='good_uite'>
-									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
-									<text class='uite'>￥{{item.goods_money}}/片</text>
-								</view>
-								<view class='num'>x{{item.order_quantity}}</view>
-							</view>
-						</view>
-					</view>
-					<view class='box_list_three'>
-						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
-					</view>
-				</view>
-				<view class='box_list_four'>
-					<view>
-						<view class='cancel type_button'>售后</view>
-						<view class='payment' bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">追加评价</view>
-					</view>
-				</view>
-			</view>
-			<view wx:elif="{{item.status==0 || item.status==9 || item.status==10}}">
-				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
-					<view class='box_list_one'>
-						<view>订单编号：{{item.parts_order_number}} </view>
-						<view class='static'>交易成功</view>
-					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
-						<view class='img'>
-							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
-						</view>
-						<view class='good_infor'>
-							<view class='good_name'>{{item.parts_goods_name}}</view>
-							<view class='good_selling'>{{item.goods_describe}}</view>
-							<view class='good_monye'>
-								<view class='good_uite'>
-									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
-									<text class='uite'>￥{{item.goods_money}}/片</text>
-								</view>
-								<view class='num'>x{{item.order_quantity}}</view>
-							</view>
-						</view>
-					</view>
-					<view class='box_list_three'>
-						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
-					</view>
-				</view>
-				<view class='box_list_four'>
-					<view>
-						<view class='cancel type_button' bindtap="delete_order" data-id="{{item.parts_order_number}}">删除</view>
-					</view>
-				</view>
-			</view>
-			<view wx:elif="{{item.status==8}}">
-				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
-					<view class='box_list_one'>
-						<view>订单编号：{{item.parts_order_number}} </view>
-						<view class='static'>交易成功</view>
-					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
-						<view class='img'>
-							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
-						</view>
-						<view class='good_infor'>
-							<view class='good_name'>{{item.parts_goods_name}}</view>
-							<view class='good_selling'>{{item.goods_describe}}</view>
-							<view class='good_monye'>
-								<view class='good_uite'>
-									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
-									<text class='uite'>￥{{item.goods_money}}/片</text>
-								</view>
-								<view class='num'>x{{item.order_quantity}}</view>
-							</view>
-						</view>
-					</view>
-					<view class='box_list_three'>
-						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
-					</view>
-				</view>
-				<view class='box_list_four'>
-					<view>
-						<view class='cancel type_button'>已完成</view>
-					</view>
-				</view>
-			</view>
-			<view wx:else>
-				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
-					<view class='box_list_one'>
-						<view>订单编号：{{item.parts_order_number}} </view>
-						<view class='static'>交易关闭</view>
-					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
-						<view class='img'>
-							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
-						</view>
-						<view class='good_infor'>
-							<view class='good_name'>{{item.parts_goods_name}}</view>
-							<view class='good_selling'>{{item.goods_describe}}</view>
-							<view class='good_monye'>
-								<view class='good_uite'>
-									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
-									<text class='uite'>￥{{item.goods_money}}/片</text>
-								</view>
-								<view class='num'>x{{item.order_quantity}}</view>
-							</view>
-						</view>
-					</view>
-					<view class='box_list_three'>
-						<view><text>共{{item.all_numbers}}件商品</text><text>合计：￥{{item.all_order_real_pay}}</text> </view>
-					</view>
-				</view>
-				<view class='box_list_four'>
-					<view>
-						<view class='cancel type_button' bindtap="delete_order" data-id="{{item.parts_order_number}}">删除</view>
 					</view>
 				</view>
 			</view>
