--- a/pages/news/news.wxml
+++ b/pages/news/news.wxml
@@ -1,5 +1,5 @@
 <view class="">
-  <view class="list">
+  <view class="list" bindtap="go_news_detail" data-pid="1">
     <view class="tilte_img">
       <image src="img/u9279.png" mode="widthFix" class="img" />
     </view>
@@ -8,7 +8,7 @@
       <view class="new_content_content">除订单外的消息提醒等</view>
     </view>
   </view>
-  <view class="list">
+  <view class="list" bindtap="go_news_detail" data-pid="2">
     <view class="tilte_img3">
       <image src="img/u9249.png" mode="widthFix" class="img3" />
     </view>
