--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -32,7 +32,6 @@ margin-top:-57rpx;
 
 }
 .userinfo-avatar {
-  
   width: 128rpx;
   height: 128rpx;
   margin: 20rpx;
@@ -47,7 +46,15 @@ margin-top:-57rpx;
   height: 245rpx;
 }
 .username{
-  font-size: 30rpx;
+  font-size:30rpx;
+  text-overflow:ellipsis;
+  display:-webkit-box;
+  -webkit-line-clamp:1;
+  overflow:hidden;
+  -webkit-box-orient:vertical;
+  width:88rpx;
+  margin:0 auto;
+
 }
 .head_portrait{
   width: 110rpx;
