--- a/pages/select_address/select_address.wxml
+++ b/pages/select_address/select_address.wxml
@@ -2,7 +2,7 @@
 <view class='all'>
 	<radio-group class="radio-group"  wx:if="{{address.info!='没有填写地址记录'}}" bindchange="radioChange" data-id="{{item.id}}" >
 		<view class='content_list' wx:for='{{address}}'>
-			<view class='radio' >
+			<view class="radio {{is?'':'weight'}}" >
 				<radio value="{{item.id}}" color='#fff' wx:if="{{is}}" />
 			</view>
 			<view class='add_information' bindtap="{{is_select_address}}"  data-tel='{{item.harvester_phone_num}}' data-name='{{item.harvester}}' data-address='{{item.address_name}}{{item.harvester_real_address}}'  data-id='{{item.id}}' name="aaa" >
@@ -16,17 +16,10 @@
 				</view>
 			</view>
 			<view class="list3">
-				
-				
-					<image src='img/u9386.png' class='add_ico' data-id="{{item.id}}"  bindtap="go_change_address" mode="widthFix"></image>
-			
-					<image src='img/u5826.png' mode="widthFix" class='delect_ico' data-id="{{item.id}}" bindtap="delect"></image>
-		     	
+				<image src='img/u9386.png' class='add_ico' data-id="{{item.id}}"  bindtap="go_change_address" mode="widthFix"></image>
+				<image src='img/u5826.png' mode="widthFix" class='delect_ico' data-id="{{item.id}}" bindtap="delect"></image>
 			</view>
-			
 		</view>
-	
 	</radio-group>
-
 	<view class='add_address' bindtap='add_address'>新增收货地址</view>
 </view>
