--- a/utils/template.wxml
+++ b/utils/template.wxml
@@ -38,7 +38,7 @@
                 </view>
                 <view class="price_text" wx:else>￥{{item.min_price}}</view>
             </view>
-            <view class="line_price">￥{{item.min_price}}</view>
+            <view class="line_price">￥{{item.line}}</view>
         </view>
     </view>
 </template>
