--- a/pages/news_detail/news_detail.wxml
+++ b/pages/news_detail/news_detail.wxml
@@ -1,13 +1,13 @@
 <import src="../../wxParse/wxParse.wxml"/>
 <view class="all">
     <view class="list" 
-        wx:for="{{msgArr}}">
-        <view class="time">{{item.time}}</view>
+        wx:for="{{messageArr}}">
+        <view class="time">{{msgArr[index].time}}</view>
         <view class="news_content">
-            <view class="news_content_title">{{item.name}}</view>
-            <view class="news_content_content">{{item.text}}
-                <!-- <template is="wxParse" data="{{wxParseData:article.nodes}}"/> -->
-            </view>
+            <view class="news_content_title">{{msgArr[index].name}}</view>
+            <view class="news_content_content">
+                <template is="wxParse" data="{{wxParseData:item}}"/>
+            </view> 
         </view>
     </view>
 </view>
