--- a/pages/integral_order/integral_order.wxml
+++ b/pages/integral_order/integral_order.wxml
@@ -13,15 +13,15 @@
 	<view class='content'>
 		<view class='order_list' wx:for="{{order}}">
 		
-			<view wx:if="{{item.status==2 || item.status==3}}">
+			<view wx:if="{{item.status==1}}">
 				<view bindtap="go_order_detail" data-id="{{item.parts_order_number}}" data-status="{{item.status}}">
 					<view class='box_list_one'>
 						<view>订单编号：{{item.parts_order_number}} </view>
 						<view class='static'>买家已付款</view>
 					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
+					<view class='box_list_two' >
 						<view class='img'>
-							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+							<image src='{{url}}{{item.goods_show_image}}' mode='aspectFill'></image>
 						</view>
 						<view class='good_infor'>
 							<view class='good_name'>{{item.parts_goods_name}}</view>
@@ -29,7 +29,7 @@
 							<view class='good_monye'>
 								<view class='good_uite'>
 									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
-									<text class='uite'>￥{{item.goods_money}}/片</text>
+									<text class='uite'>{{item.integral}}积分</text>
 								</view>
 								<view class='num'>x{{item.order_quantity}}</view>
 							</view>
@@ -51,17 +51,17 @@
 						<view>订单编号：{{item.parts_order_number}} </view>
 						<view class='static'>卖家已发货</view>
 					</view>
-					<view class='box_list_two' wx:for="{{item.info}}">
+					<view class='box_list_two' >
 						<view class='img'>
-							<image src='{{url}}{{item.goods_image}}' mode='aspectFill'></image>
+							<image src='{{url}}{{item.goods_show_image}}' mode='aspectFill'></image>
 						</view>
 						<view class='good_infor'>
-							<view class='good_name'>{{item.parts_goods_name}}</view>
+							<view class='good_name'>{{item.parts_gogoods_show_imageods_name}}</view>
 							<view class='good_selling'>{{item.goods_describe}}</view>
 							<view class='good_monye'>
 								<view class='good_uite'>
 									<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
-									<text class='uite'>￥{{item.goods_money}}/片</text>
+									<text class='uite'>{{item.integral}}积分</text>
 								</view>
 								<view class='num'>x{{item.order_quantity}}</view>
 							</view>
