--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -86,7 +86,7 @@
   width: 670rpx;
   display: flex;
   justify-content: space-between;
-  border-bottom:solid 3px #F2F2F2;
+  /* border-bottom:solid 3px #F2F2F2; */
 
 }
 .good_infor{
