--- a/pages/order_detail/order_detail.wxss
+++ b/pages/order_detail/order_detail.wxss
@@ -107,7 +107,7 @@
     width: 670rpx;
     display: flex;
     justify-content: space-between;
-    border-bottom:solid 3px #F2F2F2;
+    /* border-bottom:solid 3px #F2F2F2; */
     flex-wrap:wrap;
   }
   .good_infor{
