--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -1,2 +1,106 @@
-<!--pages/storage/view/view.wxml-->
-<text>pages/storage/view/view.wxml</text>
+<!-- pages/storage/view/view.wxml -->
+<view class="swiper-tab">
+    <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">
+        茶仓
+    </view>
+    <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">
+        定制
+    </view>
+    <view class="swiper-tab-item {{currentTab==2?'active':''}}" data-current="2" bindtap="clickTab">
+        众筹
+    </view>
+</view>
+<swiper current="{{currentTab}}" duration="300" bindchange="swiperTab">
+    <swiper-item>
+        <view>
+            <view class="gross-container">
+                <view class="gross-item gross-title">总价值</view>
+                <view class="gross-item gross-number">￥123456.00</view>
+                <view class="gross-item choice-warehouse choice-down" bindtap="showAllStorage">
+                    <text>全部仓储</text>
+                    <image src="img/icon-c.png" class="icon-choice {{scaleImg?'scaley-img':''}}" />
+                </view>
+                <view class="warehouse-container" style="display: {{wareHouseFlag?'':'none'}};">
+                    <view class="item-box">
+                        <view class="warehouse-left">
+                            <text>全部</text>
+                        </view>
+                        <view class="warehouse-right">
+                            <view class="warehouse-item">北京仓01仓</view>
+                            <view class="warehouse-item">北京仓01仓</view>
+                            <view class="warehouse-item">北京仓01仓</view>
+                        </view>
+                    </view>
+                    <view class="retract" bindtap="showAllStorage">
+                        <image src="img/icon4.png" class="icon-retract" />
+                    </view>
+                </view>
+            </view>
+            <view class="storage-enviroment">
+                <view class="storage-name-box">
+                    <image src="img/icon1.png" class="" />
+                    <text class="storage-name">仓JB01</text>
+                </view>
+                <view class="enviroment-data-box">
+                    <view class="enviroment-item">
+                        <image src="img/icon2.png" class="icon-temperature" />
+                        <text class="temperature">25.55°C</text>
+                    </view>
+                    <view class="enviroment-item">
+                        <image src="img/icon3.png" class="icon-humidity" />
+                        <text class="humidity">78.99%</text>
+                    </view>
+                    <view class="more">
+                        <image src="img/icon5.png" />
+                    </view>
+                </view>
+            </view>
+            <view class="storage-manage">
+                <view class="storage-item">
+                    <view class="item-left">
+                        <image src="img/img1.png" class="display-img" />
+                        <text class="tea-name">大观</text>
+                        <text class="tea-date">生产日期：2018.08.09</text>
+                        <view class="tag-box">
+                            <text class="tag-text">北京仓</text>
+                            <text class="tag-text">古树生茶</text>
+                        </view>
+                    </view>
+                    <view class="item-right">
+                        <view class="tea-stock">
+                            <text class="stock-title">实时库存</text>
+                            <text class="stock-num">11</text>
+                            件
+                            <text class="stock-num">11</text>
+                            提
+                            <text class="stock-num">11</text>
+                            片
+                            <text class="stock-more" bindtap="toStockDetail">详情></text>
+                        </view>
+                        <view class="exchange-price">
+                            <view>
+                                <text>购入入仓日期：</text>
+                                <text>2018.01.01</text>
+                            </view>
+                            <view>
+                                <text>当前市场参考价：</text>
+                                <text class="out-price">￥5000/片</text>
+                            </view>
+                            <view>
+                                <text>您的初始购入价：</text>
+                                <text>￥20000/片</text>
+                            </view>
+                        </view>
+                        <button class="out-storage" bindtap="outOfStock">出仓</button>
+                    </view>
+                </view>
+            </view>
+        </view>
+    </swiper-item>
+    <swiper-item>
+        <view>第二屏</view>
+    </swiper-item>
+    <swiper-item>
+        <view>第三屏</view>
+    </swiper-item>
+</swiper>
