--- a/pages/apply_after_sales/apply_after_sales.wxml
+++ b/pages/apply_after_sales/apply_after_sales.wxml
@@ -1,19 +1,19 @@
 <!--pages/apply_after_sales/apply_after_sales.wxml-->
 <view class="all" style='height:{{height}}px;'>
     <view class="good_infor">
-        <image class="good_img" src="../../images/u1222.png" mode="widthFix" ></image>
-          <text class="good_name">商品名称</text>  
+        <image class="good_img" src="{{url}}{{goods.goods_image}}" mode="widthFix" ></image>
+          <text class="good_name">{{goods.parts_goods_name}}</text>  
     </view>
     <view class="opration">
         <radio-group class="radio-group" bindchange="radioChange">
               <radio value="" checked="true"   color='#fff' />要求退货退款金额：
-              <input type="text" placeholder="不能超过购买总价" class="input_monly"></input>
+              <input type="text" placeholder="不能超过购买总价" class="input_monly" disabled></input>
               <text class="danwei">元</text>
               <radio value="" class="radio_b" color='#fff' />要求换货
         </radio-group>
     </view>
     <view class="reason">
-        <textarea name="" id="" class="reason_content" placeholder="请说明原因"></textarea>
+        <textarea name="content" id="" class="reason_content" placeholder="请说明原因"></textarea>
     </view>
     <view class="uplode_img">
           <view class="imgcontent" wx:for="{{img}}">
