--- a/pages/order_detail/order_detail.wxml
+++ b/pages/order_detail/order_detail.wxml
@@ -98,7 +98,7 @@
                 <view class='box_list_four'>
                     <view class="flex">
                         <view class="courier">顺丰：799394904004040</view>
-                        <view class='remind_delivery cancel type_button'>确认收货</view>
+                        <!-- <view class='remind_delivery cancel type_button'>确认收货</view> -->
                     </view>
                 </view>
             </view>
@@ -127,7 +127,7 @@
                 </view>
                 <view class='box_list_four'>
                     <view>
-                        <view class='cancel type_button'>售后</view>
+                        <view class='cancel type_button'  bindtap="go_apply_after_sales" data-id="{{item.id}}">售后</view>
                         <view class='payment'  bindtap="go_evaluation" data-id="{{item.id}}">追加评价</view>
                     </view>
                 </view>
