--- a/pages/apply_after_sales/apply_after_sales.wxml
+++ b/pages/apply_after_sales/apply_after_sales.wxml
@@ -1,4 +1,5 @@
 <!--pages/apply_after_sales/apply_after_sales.wxml-->
+  <form  bindsubmit="formSubmit" content-type="multipart/form-data">
 <view class="all" style='height:{{height}}px;'>
     <view class="good_infor">
         <image class="good_img" src="{{url}}{{goods.goods_image}}" mode="widthFix" ></image>
@@ -6,10 +7,10 @@
     </view>
     <view class="opration">
         <radio-group class="radio-group" bindchange="radioChange">
-              <radio value="" checked="true"   color='#fff' />要求退货退款金额：
-              <input type="text" placeholder="不能超过购买总价" class="input_monly" disabled></input>
+              <radio value="1" checked="true"   color='#fff' />要求退货退款金额：
+              <input type="text" placeholder="不能超过购买总价" class="input_monly" disabled value="{{goods.refund_amount}}"> </input>
               <text class="danwei">元</text>
-              <radio value="" class="radio_b" color='#fff' />要求换货
+              <radio value="2" class="radio_b" color='#fff' />要求换货
         </radio-group>
     </view>
     <view class="reason">
@@ -25,4 +26,5 @@
      <view class="btn-area">
             <button form-type="submit" class='button-hovers'>提交</button>
      </view>
-</view>
+ </view>
+</form>
